# comfyui_HiDream-Sampler

./: .gitignore  BasicWorkflow.json  LICENSE  README.md  __init__.py  hidreamsampler.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
hi_diffusers/models/: attention.py  attention_processor.py
hi_diffusers/models/transformers/: transformer_hidream_image.py
hi_diffusers/pipelines/hidream_image/: pipeline_hidream_image.py  pipeline_hidream_image_to_image.py
sample_workflow/: Sample HiDream Sampler Workflow.json
